docstring-parser-tool/src/main/java/ch/jako/parser/oneliner/Oneliner.g4
grammar Oneliner;

@header {
   package ch.jako.parser.oneliner;
}

oneliner : NEWLINE* oneLine NEWLINE* EOF;

oneLine : UNKNOWN_CHAR+;

NEWLINE
    : ( '\r'? '\n' | '\r' | '\f' )
    ;

UNKNOWN_CHAR
    : .
    ;
